--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,14 +1,12 @@
-<html>
-	<head>
-		<title>Blog</title>
-	</head>
-	<body>
-		{% for post in posts %}
-			<div>
-				<p>published: {{post.published_date}}</p>
-				<h1><a href="">{{post.title}}</a></h1>
-				<p>{{post.content|linebreaksbr}}</p>
-			</div>
-		{% endfor %}
-	</body>
-</html>
+				{% extends 'blog/base.html' %}
+				{% block content %}
+					{% for post in posts %}
+						<div class="post">
+							<div class="date">
+								published: {{post.published_date}}
+							</div>
+							<h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
+							<p>{{post.content|linebreaksbr}}</p>
+						</div>
+					{% endfor %}
+				{% endblock content %}
