--- a/mysite/blog/templates/blog/BASE.HTML
+++ b/mysite/blog/templates/blog/BASE.HTML
@@ -9,13 +9,16 @@
 	</head>
 	<body>
 		<div class="page-header">
-			<h1>Simple blog</h1>
+			{% if user.is_authenticated %}
+				<a href="{% url 'post_new' %}" class = "top-menu"><span class = "glyphicon glyphicon-plus"></span></a>
+			{% endif %}
+			<h1><a href = "/">Simple blog</a></h1>
 		</div>
 		<div class = "content container">
 			<div class = "row">
 				<div class = "col-md-8">
 					{% block content %}
-					<!-- Use base.html -->
+					<!-- Use post_detail -->
 					{% endblock %}
 				</div>
 			</div>
